--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,20 @@
 Package: sr.utils
 Type: Package
-Title: What the Package Does (Title Case)
+Title: WGFD Seasonal Range Utilities
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: WGFD
+Maintainer: Eric Newkirk <eric.newkirk@wyo.gov>
+Description: Code for delineating wildlife seasonal range.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.3
+Imports:
+  httr,
+  leaflet,
+  sf,
+  shiny,
+  shinydashboard,
+  stats,
+  terra,
+  tools
