--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Imports:
+  dplyr,
+  grDevices,
   httr,
   leaflet,
   sf,
@@ -17,4 +19,5 @@ Imports:
   shinydashboard,
   stats,
   terra,
+  tibble,
   tools
