--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,14 @@ Description: Code for delineating wildlife seasonal range.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports:
   dplyr,
   grDevices,
   httr,
   leaflet,
+  lubridate,
+  rlang,
   sf,
   shiny,
   shinydashboard,
